# ApolloDocs

./: .dockerignore  .env.prod.example  .gitignore  .~lock.placas datasheet.csv#  CLAUDE.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  inversors datasheet.csv  main.py  main2.py  package-lock.json  package.json  placas datasheet.csv  pyproject.toml  text-improve.txt
api/: .dockerignore  Dockerfile  app.py  security.py  settings.py
api/routers/: auth.py  clientes.py  docs.py  equipamentos_inversores.py  equipamentos_placas.py  inversores.py  procuradores.py  projetistas.py  projetos.py  users.py
api/schemas/: models.py  user.py
api/services/: all_docs_service.py  docs_service.py
api/tests/: conftest.py  test_app.py  test_clientes.py  test_db.py  test_diagramav2.py  test_docs.py  test_equipamentos.py  test_inversores.py  test_memorial_v2.py  test_payloads.py  test_placas.py  test_procuradores.py  test_projetistas.py  test_projetos.py  test_retorno_memorial.py  test_security.py  test_users.py
frontend/: .dockerignore  .env.local.example  Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
inputs/: input_necessario.json  input_solar.json
memory/: MEMORY.md  frontend.md  project_catalog_goal.md  src_analysis.md
migrations/: env.py
nginx/: nginx.conf
scripts/: import_inversores.py  seed_equipamentos.py  seed_inversores_placas.py
src/: config.py  createproject.py
templates/: FormulÃ¡rio de SolicitaÃ§Ã£o de Rateio - GD (2).doc  Memorial Descritivo_Final (2).docx  Microgeração maior que 10kw(1).odg  diagrama unifilar base projeto.bak  diagrama unifilar base projeto.dwg  memorial_descritivo2.py
(+123 files in other folders)
