[project]
name = "projeto-solar"
version = "0.2.0"
description = "um software que produz os documentos necessarios para uma homologacao de energia solar residencial/comercial/industrial"
authors = [
    {name = "Diego Canafistula",email = "diego.canafistula@gmail.com"}
]
license = {text = "GPL"}
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "reportlab (>=4.4.4,<5.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "pymupdf (>=1.26.5,<2.0.0)",
    "pydantic[email] (>=2.12.3,<3.0.0)",
    "fastapi[standard] (>=0.122.0,<0.123.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
]

[tool.poetry]
package-mode = false

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT', 'FAST']
ignore = ["E501"]

[tool.ruff.format]
preview = true

[tool.ruff.per-file-ignores]
"src/buildingdocuments/formularioENEL.py" = ["ALL"]

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'
asyncio_default_fixture_loop_scope = 'function'

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'uvicorn api.app:app'
pre_test = 'task lint'
test = 'pytest -s -x --cov=api -vv'



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "ruff (>=0.14.10,<0.15.0)"
]
